--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   sqflite: ^2.4.1
   path: ^1.9.0
   provider: ^6.1.4
+  flutter_secure_storage: ^9.2.4
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
