--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   provider: ^6.1.4
   flutter_secure_storage: ^9.2.4
   dartz: ^0.10.1
+  image_picker: ^1.1.2
+  path_provider: ^2.1.5
+  image: ^4.5.4
 
 dev_dependencies:
   flutter_test:
